--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,24 @@
   <meta charset="UTF-8">
   <title>Mobile App</title>
   <link href="main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 
 <body>
 <div class="conteiner">
   <section class="firstSection">
     <div class="content">
-
-      <a href="javascript:void(0)"><img src="images/LOGO.png" alt="Logo"></a>
-
-      <h1>Get a personalized football experience tailored just for you </h1>
-
-      <p>Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.</p>
-
-      <a href="javascript:void(0)"><img src="images/GooglePlay.png" alt="Google Play logo"></a>
-      <a href="javascript:void(0)"><img src="images/AppleStore.png" alt="phone photo"></a>
+      <div class="logo">
+        <a href="javascript:void(0)"><img src="images/LOGO.png" alt="Logo"></a>
+      </div>
+      <div class="main_content">
+        <h1 class="main_h1">Get a personalized football experience tailored just for you </h1>
+        <p class="main_info">Achieve super-fan status by getting tailored updates and <br>up-to-the-minute information on your team.</p>
+      </div>
+      <div class="links">
+        <a href="javascript:void(0)"><img src="images/AppleStore.png" alt="phone photo"></a>
+        <a href="javascript:void(0)"><img src="images/GooglePlay.png" alt="Google Play logo"></a>
+      </div>
     </div>
 
   </section>
