--- a/src/index.html
+++ b/src/index.html
@@ -85,17 +85,23 @@
       </div>
     </div>
     <div class="right_thirdSection">
-      <div class="thirdRound">
-        <div class="secondRound">
-          <div class="firstRound">
-            <img src="images/Mobile_photo.png" alt="phone photo" class="phone_photo">
-          </div>
-        </div>
-      </div>
+      <img src="images/Mobile_photo.png" alt="phone photo" class="phone_photo">
+      <img src="images/Ring_.png" alt="" class="ring_imege">
+      <img src="images/Coll_.png" alt="" class="incoming_coll_image">
+
+      <div class="first_round"></div>
+      <div class="second_round"></div>
+      <div class="third_round"></div>
+      <div class="forth_round"></div>
+      <div class="fifth_round"></div>
+      <div class="six_round"></div>
+
+
     </div>
+
   </section>
 
-  <section>
+  <section class="features">
     <h2>Features That Will Tailor Your Experience</h2>
     <ul>
       <li><img src="images/Vector.png" alt="picture">• Video highlights for every Premier League and English Football
