--- a/src/index.html
+++ b/src/index.html
@@ -199,8 +199,8 @@
     <a href="javascript:void(0)"><img src="images/Group_fc.png" alt="link facebook"></a>
     <a href="javascript:void(0)"><img src="images/Group_inst.png" alt="link instagram "></a>
   </div>
-
+<p>kfjghdfg</p>
 </footer>
-dit
+
 </body>
 </html>
