--- a/src/index.html
+++ b/src/index.html
@@ -96,41 +96,66 @@
       <div class="fifth_round"></div>
       <div class="six_round"></div>
 
-
     </div>
 
   </section>
 
   <section class="features">
-    <h2>Features That Will Tailor Your Experience</h2>
-    <ul>
-      <li><img src="images/Vector.png" alt="picture">• Video highlights for every Premier League and English Football
-        League
-        game
+    <div class="features__title">
+      <h2 class="page__title">Features That Will Tailor Your Experience</h2>
+    </div>
+    <ul class="features__wrap">
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector.png" alt="picture">
+        <p class="features-block__text">Video highlights for every Premier League and English Football
+          League game
+        </p>
       </li>
-      <li><img src="images/Vector(1).png" alt="picture">• Match pages showing live scores, commentary, team line-ups
-        and enhanced match stats to keep you up-to-date on all the action
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(3).png" alt="picture">
+        <p class="features-block__text">Notifications for your teams, including in-game goal clips
+          and Premier League match highlights for Sky TV subscribers with Guardian.
+        </p>
       </li>
-      <li><img src="images/Vector(2).png" alt="picture">• The Guardian News Vidiprinter. Follow the goals as they go
-        in with
-        our new and improved Vidiprinter
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(6).png" alt="picture">
+        <p class="features-block__text">Brand new video section including dedicated areas for your
+          chosen team, trending video, Premier League, Football league and other major leagues</p>
       </li>
-      <li><img src="images/Vector(3).png" alt="picture">• Notifications for your teams, including in-game goal clips
-        and Premier League match highlights for Sky TV subscribers with Guardian.
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(1).png" alt="picture">
+        <p class="features-block__text">• Match pages showing live scores, commentary, team line-ups
+          and enhanced match stats to keep you up-to-date on all the action
+        </p>
       </li>
-      <li><img src="images/Vector(4).png" alt="picture">• The new picture in picture video mode means you can watch
-        goals, manager interviews and more whilst using other areas of the app – so you don’t need to miss any of
-        the action
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(4).png" alt="picture">
+        <p class="features-block__text">The new picture in picture video mode means you can watch
+          goals, manager interviews and more whilst using other areas of the app – so you don’t need to miss any of
+          the action
+        </p>
       </li>
-      <li><img src="images/Vector(5).png" alt="picture">• Match reports, previews and a dedicated news section</li>
-      <li><img src="images/Vector(6).png" alt="picture">• Brand new video section including dedicated areas for your
-        chosen team, trending video, Premier League, Football league and other major leagues
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(7).png" alt="picture">
+        <p class="features-block__text">Live updated league tables including all the domestic,
+          European and major leagues and tournaments</p>
       </li>
-      <li><img src="images/Vector(7).png" alt="picture">• Live updated league tables including all the domestic,
-        European and major leagues and tournaments
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(2).png" alt="picture">
+        <p class="features-block__text"> The Guardian News Vidiprinter. Follow the goals as they go
+          in with our new and improved Vidiprinter
+        </p>
       </li>
-      <li><img src="images/Vector(8).png" alt="picture">• And you can achieve super-fan status by personalising your
-        home page with up-to-the-minute information on your team.
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(5).png" alt="picture">
+        <p class="features-block__text">Match reports, previews and a dedicated news section
+        </p>
+      </li>
+      <li class="features-block features-block--indents">
+        <img class="features-block__image" src="images/Vector(8).png" alt="picture">
+        <p class="features-block__text"> And you can achieve super-fan status by personalising your
+          home page with up-to-the-minute information on your team.
+        </p>
       </li>
     </ul>
   </section>
@@ -199,8 +224,8 @@
     <a href="javascript:void(0)"><img src="images/Group_fc.png" alt="link facebook"></a>
     <a href="javascript:void(0)"><img src="images/Group_inst.png" alt="link instagram "></a>
   </div>
-<p>test 2</p>
 
+  <p>TEST</p>
 </footer>
 
 </body>
