--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,6 @@
   </section>
 
   <section>
-
     <h2>What Our Users Say</h2>
     <img src="images/Group161.7.png" alt="button left">
     <div class="reviews">
@@ -185,10 +184,12 @@
     </div>
   </section>
 
-  <section>
-    <h2> We have been featured in </h2>
-    <ul>
-      <li><a href="javascript:void(0)"><img src="images/Group(2).png" alt="link of sport TV"></a></li>
+  <section class="sport-chanel">
+    <div class="sport-chanel__title">
+      <h2 class="page__title"> We have been featured in </h2>
+    </div>
+    <ul class="links-list">
+      <li><a class="importabt-link" href="javascript:void(0)"><img src="images/Group(2).png" alt="link of sport TV"></a></li>
       <li><a href="javascript:void(0)"><img src="images/Vector(10).png" alt="link of sport chanel"></a></li>
       <li><a href="javascript:void(0)"><img src="images/Group.png" alt="link of nbc chanel"></a></li>
       <li><a href="javascript:void(0)"><img src="images/Group(1).png" alt="link of disinger chanel"></a></li>
@@ -198,34 +199,47 @@
     </ul>
   </section>
 
-  <section>
-    <img src="images/Frame2.png" alt="photo">
-    <h2>Get Up Close With Your Team</h2>
-    <p>If you’re interested in the scores of more than one team (it’s OK, we won’t tell your mates you support two
+  <section class="promotion">
+    <div class="promotion__image">
+      <img src="images/Frame2.png" alt="photo">
+    </div>
+
+    <div class="promotion__main">
+      <div class="promotion__title">
+    <h2 class="promotion__title--rightSide">Get Up Close With Your Team</h2>
+      </div>
+    <p class="promotion__text">If you’re interested in the scores of more than one team (it’s OK, we won’t tell your mates you support two
       clubs!), you can choose the scores and competitions that matter to you using the ‘My Scores’ section. So, make
       sure you’re a top-flight football fan by downloading the Football Score Centre now. It’s got all this:</p>
-    <a href="javascript:void(0)"><img src="images/GooglePlay.png" alt="Google Play logo"></a>
-    <a href="javascript:void(0)"><img src="images/AppleStore.png" alt="phone photo"></a>
+      <div class="promotion__links">
+        <a href="javascript:void(0)"><img src="images/AppleStore.png" alt="phone photo"></a>
+        <a href="javascript:void(0)"><img src="images/GooglePlay.png" alt="Google Play logo"></a>
+      </div>
+    </div>
   </section>
 </div>
 
 <footer>
-  <a href="javascript:void(0)"><img src="images/LOGO.png" alt="Logo"></a>
-  <nav>
-    <ul>
-      <li><a href="javascript:void(0)">Download</a></li>
-      <li><a href="javascript:void(0)">Support</a></li>
-      <li><a href="javascript:void(0)">Developers</a></li>
-      <li><a href="javascript:void(0)">Privacy</a></li>
+  <div class="footer-wrap">
+  <div class="footer__logo">
+  <a href="javascript:void(0)"><img src="images/Logo_white.png" alt="Logo"></a>
+  </div>
+  <div>
+    <ul class="footer__navigation">
+      <li><a class="footer__navigation-link" href="javascript:void(0)">Download</a></li>
+      <li><a class="footer__navigation-link" href="javascript:void(0)">Support</a></li>
+      <li><a class="footer__navigation-link" href="javascript:void(0)">Developers</a></li>
+      <li><a class="footer__navigation-link" href="javascript:void(0)">Privacy</a></li>
     </ul>
-  </nav>
-  <div class="links">
+  </div >
+  <div class="footer__links">
     <a href="javascript:void(0)"><img src="images/Group_tv.png" alt="link twiter"></a>
     <a href="javascript:void(0)"><img src="images/Group_fc.png" alt="link facebook"></a>
     <a href="javascript:void(0)"><img src="images/Group_inst.png" alt="link instagram "></a>
   </div>
 
-  <p>TEST</p>
+  </div>
+
 </footer>
 
 </body>
