--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../lib/slick/slick.css">
   <link rel="stylesheet" type="text/css" href="../lib/slick/slick-theme.css">
+  <link rel="stylesheet" href="../lib/animate.css">
+  <script src="../lib/wow.min.js"></script>
 </head>
 
 <body>
@@ -19,11 +21,11 @@
           <a href="javascript:void(0)"><img src="images/LOGO.png" alt="Logo"></a>
         </div>
         <div class="main_content">
-          <h1 class="main_h1">Get a personalized football experience tailored just for you </h1>
-          <p class="main_info">Achieve super-fan status by getting tailored updates and <br>up-to-the-minute information
+          <h1 class="main_h1 wow bounceInUp" data-wow-duration="1s">Get a personalized football experience tailored just for you </h1>
+          <p class="main_info wow bounceInUp" data-wow-duration="2s">Achieve super-fan status by getting tailored updates and <br>up-to-the-minute information
             on your team.</p>
         </div>
-        <div class="links">
+        <div class="links wow bounceInUp" data-wow-duration="3s">
           <a href="javascript:void(0)"><img src="images/AppleStore.png" alt="phone photo"></a>
           <a href="javascript:void(0)"><img src="images/GooglePlay.png" alt="Google Play logo"></a>
         </div>
@@ -90,7 +92,7 @@
     </div>
     <div class="right_thirdSection">
       <img src="images/Mobile_photo.png" alt="phone photo" class="phone_photo">
-      <img src="images/Ring_.png" alt="" class="ring_imege">
+      <img src="images/Ring_.png" alt="" class="ring_imege wow shake" data-wow-iteration="2">
       <img src="images/Coll_.png" alt="" class="incoming_coll_image">
 
       <div class="first_round"></div>
@@ -244,10 +246,10 @@
   </section>
 
   <section class="sport-chanel">
-    <div class="sport-chanel__title">
+    <div class="sport-chanel__title wow bounceInLeft" data-wow-duration="2s">
       <h2 class="page__title"> We have been featured in </h2>
     </div>
-    <ul class="links-list">
+    <ul class="links-list wow bounceInRight" data-wow-duration="3s"">
       <li><a class="importabt-link" href="javascript:void(0)"><img src="images/Group(2).png" alt="link of sport TV"></a>
       </li>
       <li><a href="javascript:void(0)"><img src="images/Vector(10).png" alt="link of sport chanel"></a></li>
@@ -338,6 +340,10 @@
   });
 
 
+</script>
+
+<script>
+  new WOW().init();
 </script>
 </body>
 </html>
